--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -26,4 +26,4 @@ jobs:
         run: npm run build
 
       - name: Deploy with Vercel
-        run: npx vercel --prod --yes --token=${{ secrets.VERCEL_TOKEN }}
+        run: npx vercel --env=production --yes --token=${{ secrets.VERCEL_TOKEN }}
