--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -26,4 +26,7 @@ jobs:
         run: npm run build
 
       - name: Deploy with Vercel
-        run: npx vercel --env=production --yes --token=${{ secrets.VERCEL_TOKEN }}
+        run: npx vercel --prod --yes \
+         --token=${{ secrets.VERCEL_TOKEN }} \
+         --org ${{ secrets.VERCEL_ORG_ID }} \
+         --project ${{ secrets.VERCEL_PROJECT_ID }}
