--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -26,7 +26,8 @@ jobs:
         run: npm run build
 
       - name: Deploy with Vercel
-        run: npx vercel --prod --yes \
+        run: npx vercel ./quiz-wise --prod --yes \
          --token=${{ secrets.VERCEL_TOKEN }} \
          --org ${{ secrets.VERCEL_ORG_ID }} \
          --project ${{ secrets.VERCEL_PROJECT_ID }}
+
